--- a/cards.html
+++ b/cards.html
@@ -32,8 +32,8 @@
       <div class="c-card__image">
         <img src="https://source.unsplash.com/random/500x500">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
-          <time class="c-instance__datetime">Instance Time</time>
+          <h4 class="c_card__title js__title">Test Card</h4>
+          <time class="c-instance__datetime js__date">Instance Time</time>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -46,8 +46,8 @@
       <div class="c-card__image">
         <img src="https://source.unsplash.com/random/500x500">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
-          <time class="c-instance__datetime">Instance Time</time>
+          <h4 class="c_card__title js__title">Test Card</h4>
+          <time class="c-instance__datetime js__date">Instance Time</time>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -60,8 +60,8 @@
       <div class="c-card__image">
         <img src="https://source.unsplash.com/random/500x500">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
-          <time class="c-instance__datetime">Instance Time</time>
+          <h4 class="c_card__title js__title">Test Card</h4>
+          <time class="c-instance__datetime js__date">Instance Time</time>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -74,8 +74,8 @@
       <div class="c-card__image">
         <img src="https://source.unsplash.com/random/500x500">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
-          <time class="c-instance__datetime">Instance Time</time>
+          <h4 class="c_card__title js__title">Test Card</h4>
+          <time class="c-instance__datetime js__date">Instance Time</time>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -88,8 +88,8 @@
       <div class="c-card__image">
         <img src="https://source.unsplash.com/random/500x500">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
-          <time class="c-instance__datetime">Instance Time</time>
+          <h4 class="c_card__title js__title">Test Card</h4>
+          <time class="c-instance__datetime js__date">Instance Time</time>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -102,8 +102,8 @@
       <div class="c-card__image">
         <img src="https://source.unsplash.com/random/500x500">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
-          <time class="c-instance__datetime">Instance Time</time>
+          <h4 class="c_card__title js__title">Test Card</h4>
+          <time class="c-instance__datetime js__date">Instance Time</time>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -116,8 +116,8 @@
       <div class="c-card__image">
         <img src="https://source.unsplash.com/random/500x500">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
-          <time class="c-instance__datetime">Instance Time</time>
+          <h4 class="c_card__title js__title">Test Card</h4>
+          <time class="c-instance__datetime js__date">Instance Time</time>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -130,8 +130,8 @@
       <div class="c-card__image">
         <img src="https://source.unsplash.com/random/500x500">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
-          <time class="c-instance__datetime">Instance Time</time>
+          <h4 class="c_card__title js__title">Test Card</h4>
+          <time class="c-instance__datetime js__date">Instance Time</time>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -144,8 +144,8 @@
       <div class="c-card__image">
         <img src="https://source.unsplash.com/random/500x500">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
-          <time class="c-instance__datetime">Instance Time</time>
+          <h4 class="c_card__title js__title">Test Card</h4>
+          <time class="c-instance__datetime js__date">Instance Time</time>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -166,11 +166,11 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c_card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
-            <div class="c-instance__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
+            <div class="c-instance__date js__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
@@ -183,11 +183,11 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c_card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
-            <div class="c-instance__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
+            <div class="c-instance__date js__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
@@ -200,11 +200,11 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c_card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
-            <div class="c-instance__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
+            <div class="c-instance__date js__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
@@ -217,11 +217,11 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c_card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
-            <div class="c-instance__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
+            <div class="c-instance__date js__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
@@ -234,11 +234,11 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c_card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
-            <div class="c-instance__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
+            <div class="c-instance__date js__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
@@ -251,11 +251,11 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
-            <div class="c-instance__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
+            <div class="c-instance__date js__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
@@ -268,11 +268,11 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
-            <div class="c-instance__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
+            <div class="c-instance__date js__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
@@ -285,11 +285,11 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
-            <div class="c-instance__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
+            <div class="c-instance__date js__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
@@ -302,11 +302,11 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
-            <div class="c-instance__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
+            <div class="c-instance__date js__date"><i class="far fa-calendar-alt"></i><time class="c-instance__datetime"></time></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn c-btn--info"><i class="fas fa-info-circle"></i>More Info</button>
@@ -329,12 +329,12 @@
       </div>
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <div class="c-instance__location">
             <i class="fas fa-map-marker-alt"></i>Location
           </div>
           <div class="c-instance__date-time">
-            <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time> <time class="c-instance__date c-instance__datetime"></time>
+            <div class="c-instance__time"><i class="far fa-clock"></i><time class=" c-instance__datetime js__date"></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -348,12 +348,12 @@
       </div>
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <div class="c-instance__location">
             <i class="fas fa-map-marker-alt"></i>Location
           </div>
           <div class="c-instance__date-time">
-            <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time> <time class="c-instance__date c-instance__datetime"></time>
+            <div class="c-instance__time"><i class="far fa-clock"></i><time class=" c-instance__datetime js__date"></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -367,12 +367,12 @@
       </div>
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <div class="c-instance__location">
             <i class="fas fa-map-marker-alt"></i>Location
           </div>
           <div class="c-instance__date-time">
-            <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time> <time class="c-instance__date c-instance__datetime"></time>
+            <div class="c-instance__time"><i class="far fa-clock"></i><time class=" c-instance__datetime js__date"></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -386,12 +386,12 @@
       </div>
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <div class="c-instance__location">
             <i class="fas fa-map-marker-alt"></i>Location
           </div>
           <div class="c-instance__date-time">
-            <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time> <time class="c-instance__date c-instance__datetime"></time>
+            <div class="c-instance__time"><i class="far fa-clock"></i><time class=" c-instance__datetime js__date"></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -405,12 +405,12 @@
       </div>
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <div class="c-instance__location">
             <i class="fas fa-map-marker-alt"></i>Location
           </div>
           <div class="c-instance__date-time">
-            <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time> <time class="c-instance__date c-instance__datetime"></time>
+            <div class="c-instance__time"><i class="far fa-clock"></i><time class=" c-instance__datetime js__date"></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -424,12 +424,12 @@
       </div>
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c-card__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <div class="c-instance__location">
             <i class="fas fa-map-marker-alt"></i>Location
           </div>
           <div class="c-instance__date-time">
-            <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time> <time class="c-instance__date c-instance__datetime"></time>
+            <div class="c-instance__time"><i class="far fa-clock"></i><time class=" c-instance__datetime js__date"></div>
           </div>
           <div class="c-card__btn-container">
             <button class="c-btn"><i class="fas fa-ticket-alt"></i>Book Tickets</button>
@@ -444,13 +444,10 @@
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <script> 
-      $.support.cors = true;
-  </script>
+<!--   <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script> -->
   <script src="js/putOn.js"></script>
+  <script src="js/pickRandom.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
