--- a/cards.html
+++ b/cards.html
@@ -166,7 +166,7 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c_card__title js__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
@@ -183,7 +183,7 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c_card__title js__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
@@ -200,7 +200,7 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c_card__title js__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
@@ -217,7 +217,7 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c_card__title js__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
@@ -234,7 +234,7 @@
     <div class="c-card">
       <div class="c-card__image">
         <div class="c-card__content">
-          <h4 class="c_card__title js__title">Test Card</h4>
+          <h4 class="c-card__title js__title">Test Card</h4>
           <hr />
           <div class="c-instance__date-time">
             <time class="c-instance__time"><i class="far fa-clock"></i>7:30pm</time>
@@ -438,6 +438,142 @@
       </div>
     </div>
     
+  </div>
+
+    <div class="c-heading"> 
+    <h1>Card List 4</h1>
+  </div>
+
+  <div class="c-card-list c-card-list--4">
+
+    <div class="c-card">
+      <div class="c-card__image">
+        <div class="c-card__content">
+          <h4 class="c-card__title js__title">Test Title
+          </h4>
+          <div class="c-card__date">
+          </div>
+          <div class="c-card__info">
+            <p class="js__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><span class="c-card__cta">more info<i class="fa fa-caret-right" aria-hidden="true"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="c-card">
+      <div class="c-card__image">
+        <div class="c-card__content">
+          <h4 class="c-card__title js__title">Test Title
+          </h4>
+          <div class="c-instance__date-time">
+          </div>
+          <div class="c-card__info">
+            <p class="js__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><span class="c-card__cta">more info<i class="fa fa-caret-right" aria-hidden="true"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="c-card">
+      <div class="c-card__image">
+        <div class="c-card__content">
+          <h4 class="c-card__title js__title">Test Title
+          </h4>
+          <div class="c-card__date">
+          </div>
+          <div class="c-card__info">
+            <p class="js__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><span class="c-card__cta">more info<i class="fa fa-caret-right" aria-hidden="true"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+        <div class="c-card">
+      <div class="c-card__image">
+        <div class="c-card__content">
+          <h4 class="c-card__title js__title">Test Title
+          </h4>
+          <div class="c-card__date">
+          </div>
+          <div class="c-card__info">
+            <p class="js__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><span class="c-card__cta">more info<i class="fa fa-caret-right" aria-hidden="true"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="c-card">
+      <div class="c-card__image">
+        <div class="c-card__content">
+          <h4 class="c-card__title js__title">Test Title
+          </h4>
+          <div class="c-instance__date-time">
+          </div>
+          <div class="c-card__info">
+            <p class="js__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><span class="c-card__cta">more info<i class="fa fa-caret-right" aria-hidden="true"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="c-card">
+      <div class="c-card__image">
+        <div class="c-card__content">
+          <h4 class="c-card__title js__title">Test Title
+          </h4>
+          <div class="c-card__date">
+          </div>
+          <div class="c-card__info">
+            <p class="js__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><span class="c-card__cta">more info<i class="fa fa-caret-right" aria-hidden="true"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+        <div class="c-card">
+      <div class="c-card__image">
+        <div class="c-card__content">
+          <h4 class="c-card__title js__title">Test Title
+          </h4>
+          <div class="c-card__date">
+          </div>
+          <div class="c-card__info">
+            <p class="js__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><span class="c-card__cta">more info<i class="fa fa-caret-right" aria-hidden="true"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="c-card">
+      <div class="c-card__image">
+        <div class="c-card__content">
+          <h4 class="c-card__title js__title">Test Title
+          </h4>
+          <div class="c-instance__date-time">
+          </div>
+          <div class="c-card__info">
+            <p class="js__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><span class="c-card__cta">more info<i class="fa fa-caret-right" aria-hidden="true"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="c-card">
+      <div class="c-card__image">
+        <div class="c-card__content">
+          <h4 class="c-card__title js__title">Test Title
+          </h4>
+          <div class="c-card__date">
+          </div>
+          <div class="c-card__info">
+            <p class="js__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><span class="c-card__cta">more info<i class="fa fa-caret-right" aria-hidden="true"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
   </div>
 
 
