FIX: Cards3responsive

--- a/cards.html
+++ b/cards.html
@@ -164,6 +164,8 @@
   <div class="c-card-list c-card-list--2">
 
     <div class="c-card">
+      <div class="c-card__mob-image">
+      </div>
       <div class="c-card__image">
         <div class="c-card__content">
           <h4 class="c-card__title js__title">Test Card</h4>
@@ -181,6 +183,8 @@
     </div>
 
     <div class="c-card">
+      <div class="c-card__mob-image">
+      </div>
       <div class="c-card__image">
         <div class="c-card__content">
           <h4 class="c-card__title js__title">Test Card</h4>
@@ -198,6 +202,8 @@
     </div>
 
     <div class="c-card">
+      <div class="c-card__mob-image">
+      </div>
       <div class="c-card__image">
         <div class="c-card__content">
           <h4 class="c-card__title js__title">Test Card</h4>
@@ -215,6 +221,8 @@
     </div>
 
     <div class="c-card">
+      <div class="c-card__mob-image">
+      </div>
       <div class="c-card__image">
         <div class="c-card__content">
           <h4 class="c-card__title js__title">Test Card</h4>
@@ -232,6 +240,8 @@
     </div>
 
     <div class="c-card">
+      <div class="c-card__mob-image">
+      </div>
       <div class="c-card__image">
         <div class="c-card__content">
           <h4 class="c-card__title js__title">Test Card</h4>
@@ -249,6 +259,8 @@
     </div>
 
     <div class="c-card">
+      <div class="c-card__mob-image">
+      </div>
       <div class="c-card__image">
         <div class="c-card__content">
           <h4 class="c-card__title js__title">Test Card</h4>
@@ -266,6 +278,8 @@
     </div>
 
     <div class="c-card">
+      <div class="c-card__mob-image">
+      </div>
       <div class="c-card__image">
         <div class="c-card__content">
           <h4 class="c-card__title js__title">Test Card</h4>
@@ -283,6 +297,8 @@
     </div>
 
     <div class="c-card">
+      <div class="c-card__mob-image">
+      </div>
       <div class="c-card__image">
         <div class="c-card__content">
           <h4 class="c-card__title js__title">Test Card</h4>
@@ -300,6 +316,8 @@
     </div>
 
     <div class="c-card">
+      <div class="c-card__mob-image">
+      </div>
       <div class="c-card__image">
         <div class="c-card__content">
           <h4 class="c-card__title js__title">Test Card</h4>
